--- a/index.html
+++ b/index.html
@@ -28,5 +28,108 @@
           </div>
         
         </header>
+
+        <main>
+          <section class="section-about">
+          <div class="u-center-text u-margin-bottom-big">
+              <h2 class="heading-secondary">
+                Exciting tours for adventurous people
+              </h2>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-2">
+                <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                <p class="paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati adipisci, tenetur voluptatem ad velit cum sequi facere dolores tempore expedita nobis, nostrum doloremque natus beatae ipsam, perspiciatis quo quae pariatur.
+                </p>
+
+                <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                <p class="paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati adipisci, tenetur voluptatem ad velit cum sequi facere
+                </p>
+
+                <a href="#" class="btn-text">Learn More&rarr;</a>
+
+              </div>
+              <div class="col-1-of-2">
+                Image Composition
+              </div>
+          </div>
+
+          </section>
+        </main>
+
+    <!--
+        <section class="grid-test">
+
+          <div class="row">
+            <div class="col-1-of-2">
+              Col 1 of 2
+            </div>
+            <div class="col-1-of-2">
+              Col 1 of 2
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-1-of-3">
+              Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+              Col 1 of 3
+            </div>
+            <div class="col-1-of-3">
+              Col 1 of 3
+            </div>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-3">
+                Col 1 of 3
+              </div>
+              <div class="col-2-of-3">
+                Col 2 of 3
+              </div>
+            </div>
+          </div>  
+          
+          <div class="row">
+              <div class="col-1-of-4">
+                Col 1 of 4
+              </div>
+              <div class="col-1-of-4">
+                Col 1 of 4
+              </div>
+              <div class="col-1-of-4">
+                Col 1 of 4
+              </div>
+              <div class="col-1-of-4">
+                  Col 1 of 4
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-4">
+                Col 1 of 4
+              </div>
+              <div class="col-1-of-4">
+                  Col 1 of 4
+              </div>
+              <div class="col-2-of-4">
+                Col 2 of 4
+              </div>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-4">
+                Col 1 of 4
+              </div>
+              <div class="col-3-of-4">
+                Col 3 of 4
+              </div>
+          </div>
+        </section>
+      -->
     </body>
 </html>
