complete card section css popup

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <p class="card__price-only">Only</p>
                         <p class="card__price-value">$297</p>
                       </div>
-                      <a href="#" class="btn btn--white">Book now!</a>
+                      <a href="#popup" class="btn btn--white">Book now!</a>
                     </div>
                   </div>
                 </div>
@@ -193,7 +193,7 @@
                           <p class="card__price-only">Only</p>
                           <p class="card__price-value">$497</p>
                         </div>
-                        <a href="#" class="btn btn--white">Book now!</a>
+                        <a href="#popup" class="btn btn--white">Book now!</a>
                       </div>
                     </div>
                   </div>
@@ -223,7 +223,7 @@
                             <p class="card__price-only">Only</p>
                             <p class="card__price-value">$897</p>
                           </div>
-                          <a href="#" class="btn btn--white">Book now!</a>
+                          <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                       </div>
                     </div>
@@ -356,6 +356,24 @@
             </div>
           </div>
         </footer>
+
+        <div class="popup" id="popup">
+          <div class="popup__content">
+            <div class="popup__left">
+              <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+              <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+              <a href="#section-tours" class="popup__close">&times;</a>
+              <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+              <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+              <p class="popup__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem quos laudantium adipisci. Veritatis consequuntur dicta, dolorem minus officiis quo sapiente at sed. Eius totam ad facilis, molestiae quod culpa delectus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi in autem cupiditate corporis expedita qui deserunt dolorum mollitia voluptatibus, dolores animi asperiores eaque aspernatur maxime vitae dolore cum praesentium culpa.
+              </p>
+              <a href="#" class="btn btn--green">Book now</a>
+            </div>
+          </div>
+        </div>
 
     <!--
         <section class="grid-test">
